Adding tokenizer.ipynb

--- a/tokenizer.ipynb
+++ b/tokenizer.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install required libraries\n",
+    "# Install required libraries (it might take a few minutes)\n",
     "%pip install transformers torch ipywidgets pandas matplotlib seaborn"
    ]
   },
