Adding word_prediction.ipynb

--- a/word_prediction.ipynb
+++ b/word_prediction.ipynb
@@ -93,13 +93,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_text(prompt, max_length=50, temperature=1.0, num_return_sequences=1):\n",
+    "def predict_text(prompt, max_new_tokens=10, temperature=1.0, num_return_sequences=1):\n",
     "    \"\"\"\n",
     "    Generate text completion using GPT-2\n",
     "    \n",
     "    Args:\n",
     "        prompt (str): The input text to complete\n",
-    "        max_length (int): Maximum length of generated text\n",
+    "        max_new_tokens (int): Maximum number of new tokens to generate (excluding prompt)\n",
     "        temperature (float): Controls randomness (0.1 = conservative, 2.0 = creative)\n",
     "        num_return_sequences (int): Number of different completions to generate\n",
     "    \n",
@@ -109,7 +109,7 @@
     "    # Generate text\n",
     "    outputs = generator(\n",
     "        prompt,\n",
-    "        max_length=max_length,\n",
+    "        max_new_tokens=max_new_tokens,\n",
     "        temperature=temperature,\n",
     "        num_return_sequences=num_return_sequences,\n",
     "        pad_token_id=tokenizer.eos_token_id,\n",
@@ -152,7 +152,7 @@
     "temperatures = [0.2, 0.8, 1.5]\n",
     "\n",
     "for temp in temperatures:\n",
-    "    completion = predict_text(test_prompt, max_length=40, temperature=temp)[0]\n",
+    "    completion = predict_text(test_prompt, max_new_tokens=10, temperature=temp)[0]\n",
     "    print(f\"Temperature {temp}: '{test_prompt} {completion}'\")\n",
     "    print()"
    ]
@@ -178,7 +178,7 @@
     "temperature = 0\n",
     "\n",
     "# Generate completion\n",
-    "completions = predict_text(prompt, max_length=60, temperature=temperature)\n",
+    "completions = predict_text(prompt, max_new_tokens=60, temperature=temperature)\n",
     "\n",
     "print(f\"Prompt: '{prompt}'\")\n",
     "print(f\"Temperature: {temperature}\")\n",
