Adding question_answering.ipynb

--- a/question_answering.ipynb
+++ b/question_answering.ipynb
@@ -153,20 +153,34 @@
     "    \n",
     "    # Find the best answer across all chunks\n",
     "    best_answer = None\n",
-    "    best_score = 0\n",
+    "    best_score = 0.0  # Explicitly initialize as float\n",
     "    best_chunk_idx = -1\n",
     "    best_result = None\n",
     "    \n",
     "    for i, chunk in enumerate(chunks):\n",
     "        try:\n",
     "            result = qa_pipeline(question=question, context=chunk)\n",
-    "            if result['score'] > best_score:\n",
-    "                best_score = result['score']\n",
+    "            # Extract score and ensure it's a proper float\n",
+    "            score = float(result['score'])\n",
+    "            \n",
+    "            # Validate score is in expected range [0, 1]\n",
+    "            if score < 0 or score > 1:\n",
+    "                print(f\"WARNING: Score {score} is outside [0,1] range in chunk {i}\")\n",
+    "                continue\n",
+    "            \n",
+    "            if score > best_score:\n",
+    "                best_score = score\n",
     "                best_answer = result['answer']\n",
     "                best_chunk_idx = i\n",
     "                best_result = result\n",
     "        except Exception as e:\n",
+    "            print(f\"Error processing chunk {i}: {e}\")\n",
     "            continue\n",
+    "    \n",
+    "    # Final validation of best score\n",
+    "    if best_score > 1.0:\n",
+    "        print(f\"ERROR: Final best_score {best_score} is > 1.0! This shouldn't happen.\")\n",
+    "        best_score = min(best_score, 1.0)  # Clamp to 1.0 as safety measure\n",
     "    \n",
     "    return {\n",
     "        'question': question,\n",
